[package]
name = "auth_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "migrate",
    "macros",
    "postgres",
    "runtime-tokio",
    "time",
    "uuid",
] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
warp = { version = "0.3.6" }
handle-errors = { path = "handle-errors" }
